# kabuki-be

./: .gitignore  README.md  main.py  pyproject.toml
libs/: Mongo_db.py  WebAPI.py  book_db.py
project/: book_db.py
project/book_reader/: __init__.py
project/book_reader/asgiapi/: __init__.py  book_reader_v1.py
script/: load_to_db.py
