[tool.poetry]
name = "kabuki-be"
version = "0.1.0"
description = ""
authors = ["jack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
numpy = "^1.26.4"
matplotlib = "^3.8.3"
opencv-contrib-python = "^4.9.0.80"
opencv-python-headless = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
